syntax = "proto3";
package call_service;
option go_package = "./generated_grpc";

message HelloRequest {
   string name = 1;
}

message HelloReply {
    string message = 1;
}

message Empty {
}

service CallService {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc i_am_online(online_request) returns (online_response);
    rpc call(call_request) returns (call_response);
}

message online_request {
    string jwt = 1;  // which contains the email address of this user
}

message online_response {
    string error = 1;
    string json_string = 2;
    bool call_coming = 3;
    string room_name = 4;
    string call_initiator = 5;
    string token = 6;
}

message call_request {
    string jwt = 1;  // which contains the email address of this user
    string target_email = 2;
}

message call_response {
    string error = 1;
    string json_string = 2;
    string room_name = 3; // we normally use the user email address as the room name
    string token = 4;
}
